--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply text-3xl lg:text-4xl font-bold;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  /* heading */
+  .heading-tasks {
+    @apply text-center md:text-xl font-bold border-b-2 border-green-700;
+  }
+
+  /* button */
+  .btn {
+    @apply px-2 md:px-4 py-1 md:py-2 text-sm lg:text-lg font-bold text-center rounded-md text-white bg-gray-400 shadow-md;
+  }
+
+  .btn-main {
+    @apply transition duration-200 ease-in-out  transform hover:scale-105;
+  }
+
+  .btn-todo {
+    @apply px-2 text-sm text-center rounded-md text-white bg-red-500;
+  }
+
+  /* flex */
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+
+  .flex-between {
+    @apply flex justify-between;
+  }
+
+  /* navigation bar */
+  .nav {
+    @apply py-2 md:py-3 h-12 md:h-16 w-full shadow-lg bg-gray-50 text-3xl md:text-4xl xl:text-5xl;
+  }
+
+  /* main page card */
+  .card {
+    @apply w-full h-full rounded-lg shadow-2xl drop-shadow-lg bg-gradient-to-br px-3 md:px-4 lg:px-5;
+  }
+
+  /* Todo box */
+  .task-box {
+    @apply w-full lg:w-1/2 px-3 md:px-5 lg:px-10 py-5;
+  }
 }
