--- a/src/index.css
+++ b/src/index.css
@@ -51,4 +51,9 @@
   .task-box {
     @apply w-full lg:w-1/2 px-3 md:px-5 lg:px-10 py-5;
   }
+
+  /* slider */
+  .slider-btn {
+    @apply text-white font-bold text-5xl absolute cursor-pointer hover:text-gray-600 transition-colors;
+  }
 }
